--------
v3.0-git
--------

[jan] Default task lists no longer have the user name as the ID.
[jan] Create a default task list if the user doesn't own any yet.
[jan] Add start date to possible colums in task list (Joel Smith
      <js-horde@jk1.net>, Request #9083).
[jan] Add system task lists (Request #2059).
[jan] Set colors per task list (Request #7480).
[cjh] Quick Add support: there is a javascript UI element for quickly adding
      tasks, and an API method (tasks/quickAdd) that provides the same
      functionality.
[jan] Add individual notification methods for single tasks (Alfonso Marín
      Marín <almarin@um.es>).


----------
v2.3.7-cvs
----------

[jan] Add upgrade scripts for next-generation SQL share driver.


------
v2.3.6
------

[jan] Remove stray closing tag when displaying the date of completion.
[mjr] Do not remove history entries when removing user data (Bug #8755).


------
v2.3.5
------

[jan] Set an alarm to one minute, if users try to set an alarm without time.
[jan] Add missing preference for not sending update notifications to yourself
      (Joel Smith <js-horde@jk1.net>, Request #8978).
[gwr] Fix organizer field not saved in tasks (kolab/issue3888).


------
v2.3.4
------

[jan] Add and fix Oracle-specific SQL scripts.
[jan] Fix importing due date attribute from iCalendar (Bug #8644).
[jan] Fix charset when exporting tasks to iCalendar 2.0 (Bug #8637).
[jan] Add Croatian translation (Matej Vela <matej.vela@carnet.hr>).


------
v2.3.3
------

[mms] Upgrade prototype.js to v1.6.1.
[jan] Fix synchronization with output compression enabled (Bug #7769).
[jan] Display application name as task list name when listing external tasks.
[jan] Fix importing vTodo data including more iCalendar components.


------
v2.3.2
------

[jan] Don't allow to set alarms if no due date has been set.
[cjh] Work around BC break with Horde versions before 3.2 (Bug #7820).
[cjh] Add URL access to tasks by "starts-with" search on the task name.